package creatures.humans;

public enum Feeling {
    HORROR,
    IRRITATION,
    PEACE
}
