package exceptions;

public class CannotBeBuriedException extends RuntimeException {

    public CannotBeBuriedException(String message) {
        super(message);
    }
}
