package exceptions;

public class LostSaturationException extends Exception {
    public LostSaturationException(String message) {
        super(message);
    }
}
