package interfaces;

public interface Die {
    void die();
}
