package world;

public class Food extends Thing {
    public Food(String name, int amount) {
        super(name, amount);
    }
}
